refactor: board pieceCount 제거 및 initialize 리팩터링
+ pieceCount는 상황에 따라 달라지는 것으로 board가 관리하기 보다 rank들을 순회함으로써 count하는게 맞다고 판단 관련 필드 및 함수 제거
+ initialize시 Rank의 static 메소드 이용하도록 수정. createRank(int size, Supplier<Piece> supplier) 로 중복 코드 제거